src/cli/snapshots/rtx__cli__activate__tests__activate_zsh.snap
---
source: src/cli/activate.rs
expression: output
---
export PATH=":$PATH"
export RTX_SHELL=zsh

rtx() {
  local command
  command="${1:-}"
  if [ "$#" = 0 ]; then
    command rtx
    return
  fi
  shift

  case "$command" in
  deactivate|shell)
    eval "$(rtx "$command" "$@")"
    ;;
  *)
    command rtx "$command" "$@"
    ;;
  esac
}

_rtx_hook() {
  trap -- '' SIGINT;
  eval "$("rtx" hook-env -s zsh)";
  trap - SIGINT;
}
typeset -ag precmd_functions;
if [[ -z "${precmd_functions[(r)_rtx_hook]+1}" ]]; then
  precmd_functions=( _rtx_hook ${precmd_functions[@]} )
fi
typeset -ag chpwd_functions;
if [[ -z "${chpwd_functions[(r)_rtx_hook]+1}" ]]; then
  chpwd_functions=( _rtx_hook ${chpwd_functions[@]} )
fi

_rtx_hook

