src/cli/snapshots/rtx__cli__activate__tests__activate_zsh_legacy.snap
---
source: src/cli/activate.rs
expression: output
---
export PATH=":$PATH"
_rtx_hook() {
  trap -- '' SIGINT;
  eval "$("rtx" hook-env -s zsh)";
  trap - SIGINT;
}
typeset -ag precmd_functions;
if [[ -z "${precmd_functions[(r)_rtx_hook]+1}" ]]; then
  precmd_functions=( _rtx_hook ${precmd_functions[@]} )
fi
typeset -ag chpwd_functions;
if [[ -z "${chpwd_functions[(r)_rtx_hook]+1}" ]]; then
  chpwd_functions=( _rtx_hook ${chpwd_functions[@]} )
fi

